--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -6,8 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "18.2.0",
+    "next": "13.2.4",
+    "react": "^16.14.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.9.0"
   }
